<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/recycler_view"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    >

    <RelativeLayout
        android:id="@+id/rellayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:id="@+id/first">

            <ImageView
                android:id="@+id/imageCurrency"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_home_black_24dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second"
            android:layout_toEndOf="@id/first">

            <TextView
                android:id="@+id/CharCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CharCode"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/third"
            android:layout_below="@+id/second"
            android:layout_toEndOf="@id/first">

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourth"
            android:layout_below="@+id/third"
            android:layout_toEndOf="@id/first">

            <TextView
                android:id="@+id/Nominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nominal"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fifth"
            android:layout_below="@+id/fourth"
            android:layout_toEndOf="@id/first">

            <TextView
                android:id="@+id/Rates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rates"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sixth"
            android:layout_below="@+id/fifth"
            android:layout_toEndOf="@id/first">

            <TextView
                android:id="@+id/Change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Change"
                android:textSize="14sp"
                />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>